--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cuid": "^2.1.8",
     "graphql": "^15.4.0",
     "graphql-config": "^3.2.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
